--- a/app/assets/stylesheets/manage.css
+++ b/app/assets/stylesheets/manage.css
@@ -56,6 +56,7 @@ th {
 	left: 0;
 	right: 0;
 	background-color: rgba(0,0,0,0.8);
+	z-index: 10000;
 }
 
 .day_active {
@@ -77,7 +78,7 @@ th {
 .close {
 	position: relative;
 	top: -20px;
-	right: -30px;
+	right: -25px;
 	display: inline-block;
 	padding: 10px;
 	width: 10%;
@@ -128,7 +129,7 @@ th {
 	cursor: pointer;
 }
 
-.new_toggle:hover {
+.new_toggle:hover, .new_toggle.active {
 	background-color: #4A9C5C;
 }
 
@@ -140,7 +141,11 @@ th {
 
 .offers_container {
 	display: inline-block;
-	overflow: auto;
+	overflow: hidden;
+}
+
+.row_info {
+	overflow: scroll;
 }
 
 .month_pages {
